# -Twitter-Data-Analysis

./: README.md  Readme.txt
analise_sentimento/: amostras-revisado.csv  tweets_com_ibm_watson.json  tweets_com_ibm_watson_e_ingles.csv  tweets_com_ibm_watson_e_ingles.json  tweets_com_ibm_watson_e_ingles.xlsx
graficos/: trends.mstr  trends.xls  trends_plot.ipynb  trends_plot.py
graficos/analise_power_bi/: trends.pbix
nuvem_palavras/: Twitter.ipynb  Twitter.py
trend_topics_python_hbase/: README.md  erro 2.txt  erro1.txt  erro3.txt
trend_topics_python_mongo/: README.md  docker-compose.yml  mongo_twitter.json  pyproject.toml
trend_topics_python_mongo/mongo/: mongo_WiredTiger.turtle  mongo_WiredTiger.wt  mongo__mdb_catalog.wt  mongo_collection-0-6280350306162250358.wt  mongo_collection-2-1116995655980153402.wt  mongo_collection-4-1116995655980153402.wt  mongo_collection-7-1116995655980153402.wt  mongo_index-1-6280350306162250358.wt  mongo_index-3-1116995655980153402.wt  mongo_index-5-1116995655980153402.wt  mongo_index-6-1116995655980153402.wt  mongo_index-8-1116995655980153402.wt  mongo_sizeStorer.wt
trend_topics_python_mongo/mongo/diagnostic.data/: mongo_diagnostic.data_metrics.2021-09-23T16-12-18Z-00000  mongo_diagnostic.data_metrics.2021-09-23T22-12-03Z-00000  mongo_diagnostic.data_metrics.2021-09-23T22-43-43Z-00000  mongo_diagnostic.data_metrics.2021-09-24T01-56-34Z-00000  mongo_diagnostic.data_metrics.2021-09-25T16-21-35Z-00000  mongo_diagnostic.data_metrics.interim
trend_topics_python_mongo/src/: connection.py  constants.py  secrets.py  services2.py
(+12 files in other folders)
