[tool.poetry]
name = "twtproject"
version = "0.1.0"
description = "Twitter trend topics"
authors = ["Rodrigo Aglinskas <rodglins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
pymongo = "^3.12.0"
tweepy = "^3.10.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
